# jiucaihezi-app

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  runninghub-banana.md  runninghub-grok-video-3文档.md  runninghub-suno.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts  我的服务器运维手册.md  火山引擎seedance2.0.md  火山方舟_接入三方工具_1779168017.md  特朗普API.md  特朗普seedace2.md
.git.backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  opencode  packed-refs
.opencode/: pnpm-lock.yaml
_canvas-archive/: canvas-media-foundation-fix-sdd.md  canvas-optimization-sdd.md  canvas-t8-adoption-plan.md  canvas-t8-full-migration.md  canvas-v8-sdd.md  canvas-v8-tdd-spec.md  canvas.ts  canvasDragMaterialStore.ts  canvasGroupBusStore.ts  canvasLogsStore.ts  canvasRunBusStore.ts  canvasStore.ts
attachment-processor/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
docs/: codex-app-server-protocol-integration-handover.md  codex-handover-current-status-2026-06.md  handoff-codex-recovery-after-scope-drift.md  handoff.md  intel-mac-app-boot-stuck-fix.md  jiucaihezi-app.code-workspace  media-runtime-rescue-plan.md  model-registry-matrix.md  rh-adapter-server-deploy-runbook.md  web-cloud-mode-p0-plan.md  web-cloud-mode-positioning.md  韭菜盒子Studio-产品介绍.pptx
document-converter/: Dockerfile  docker-compose.yml  requirements.txt
gateway/: README.md  package.json  pnpm-lock.yaml  wrangler.toml
jc-canvas/: 未命名画布.jccanvas
jc-cloud-login-component/: JcCloudLoginBox.vue  README.md
jiucaihezi-promo/: index.html  meta.json  package.json  今日收获-0710.pptx
public/: 404.html  _headers  boot-diagnostics.js  boot-guard.js
rh-adapter/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
rh-adapter/docs/: ai-app-full-support-plan.md
rh-adapter/src/: config.py  main.py
rh-adapter/src/middleware/: error_handler.py
rh-adapter/src/models/: __init__.py  capabilities.json  capabilities.py  mapping.py  schemas.py
rh-adapter/src/services/: __init__.py  ai_app.py  audio.py  image.py  rh_client.py  standard_payload.py  video.py
rh-adapter/tests/: test_ai_app_submit.py  test_health.py  test_mapping.py  test_standard_payload.py
scripts/: add-skill-frontmatter.mjs  audit-app-opencode-only.mjs  audit-desktop-dist.mjs  audit-skills-manage-parity.mjs  audit-web-direct-boundary.mjs  audit-web-dist.mjs  build-model-capabilities.mjs  build-skills-index.mjs  bundle-icons.mjs  check-tauri-fs-acl.mjs  codemod-mso-phase2b-final.mjs  codemod-mso-phase2b.mjs  codemod-mso-to-jcicon.mjs  create-official-dmg.mjs  fix-macos-app.mjs  gen_product_ppt.py  generate-icons.mjs  md_to_a4_pdf.py  migrate-media-to-fs.mjs  patch-monterey-compat.mjs  (+12 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  updater_public.pem
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secure_store.rs  worktree.rs
src-tauri/src/commands/: clipboard.rs  dev.rs  greet.rs  http.rs  mcp.rs  media.rs  mod.rs  obsidian.rs  opencode.rs  plugin.rs  session.rs  skill_material.rs  tools.rs
src-tauri/src/skills/: agents.rs  collections.rs  db.rs  discover.rs  github_import.rs  linker.rs  marketplace.rs  mod.rs  path_utils.rs  scanner.rs  settings.rs  skills.rs
(+1915 files in other folders)
