[package]
name = "jiucaihezi-app"
version = "1.1.11"
description = "韭菜盒子 — 你的本地 AI 工作台"
authors = ["you"]
edition = "2024"

[lib]
name = "jiucaihezi_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rfd = "0.15"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["io-util", "process", "sync", "time", "macros"] }
flate2 = "1"
tar = "0.4"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-deep-link = "2"
arboard = "3"
md5 = "0.7"
dirs-next = "2.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
